--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body::-webkit-scrollbar {
+  width: 0;
+}
+
 html {
     font-size: 16px; /* Hoặc giá trị cố định bạn mong muốn */
   }
